# etl-boiler

./: .gitignore  README.md  pyproject.toml
background/: README.md
inputs/: example.csv
outputs/: example.trig  example.ttl
scripts/: convert.py  dirs.py  load.py  logs.py  main.py  namespaces.py  patterns.py  utils.py  validate.py
