[tool.poetry]
name = "etl-boiler"
version = "0.1.0"
description = "ETL Boilerplate code"
authors = ["Lawon Lewis <lawson@kurrawong.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.1.1"
labelify = {git = "https://github.com/Kurrawong/labelify"}

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
